@@ -128,7 +128,7 @@
 	<h3>Running apps</h3>
 	<div>
 		App menu is available by swipe down on any watch face. Than select application by touch app icon. For return to
-		menu from app, press crown button. For returning from menu to watch face, press crwon button on menu screen.
+		menu from app, press crown button. For returning from menu to watch face, press crwon button on menu screen or swipe down.
 	</div>
 
 	<a name="power-onoff"></a>
