@@ -60,7 +60,13 @@ bool AppMenu::handleTouch(uint8_t x, uint8_t y) {
 AppMenu::AppMenu() {
 }
 
-bool AppMenu:: handlePEKShort() {
+bool AppMenu::handlePEKShort() {
 	AppRunner::getInstance()->setToDefaultApp();
 	return true;
 }
+
+bool AppMenu::onSwipeDown() {
+	AppRunner::getInstance()->setToDefaultApp();
+	return true;
+}
+
