@@ -11,6 +11,7 @@ BUGFIX: touch on blank space in menu do nothing (sshow empty screen before)
 REFACTOR: PEKShort on apps return to app menu by default instead of watch face
 REFACTOR: onSwipe(up|down|left|right) methods instead of handle SwipeVertical/horizontal in apps
 REFACTOR: AppMenu launching from watch faces by swipe up
+REFACTOR: AppMenu exit to watch faces by swipe down
 REFACTOR: settings screen buttons rendering with fillRoundRect instead circle+rect+circle
 
 cyberWatch 1.2
